Add prometheus metrics to guestbook-go example.

--- a/examples/guestbook-go/public/index.html
+++ b/examples/guestbook-go/public/index.html
@@ -26,6 +26,7 @@
     <div>
       <p><h2 id="guestbook-host-address"></h2></p>
       <p><a href="env">/env</a>
+      <a href="metrics">/metrics</a>
       <a href="info">/info</a></p>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
